    containing spaces, don't process the TZ value that it contains,
    because it's invalid and DateTime::TimeZone::SystemV objects to it

  * tighten the criteria for recognising the special observance that
    indicates that local time is not defined (abbreviation "zzz" was
    previously the sole criterion, now also require zero offset and
    not DST)

  * when a local time is non-existent due to an undefined observance,
    give an error message that says so, rather than conflating it with
    local time being non-existent due to an offset change

  * test the error message that is given when a local time does not
    exist due to an offset change

version 0.003; 2010-07-30

  * in documentation, correct one use of "filename" to "filehandle"

  * in documentation, use the term "truth value" instead of the less
    precise "boolean"

  * abandon use of the "fields" module

  * check for required Perl version at runtime

  * use full stricture in test suite

  * in Build.PL, explicitly declare configure-time requirements

  * remove bogus "exit 0" from Build.PL

  * add MYMETA.yml to .cvsignore

version 0.002; 2009-03-22

  * with a version-1 tzfile, treat the last observance as continuing
    indefinitely, rather than as having no rule for the future

  * test POD syntax and coverage, and rename some internal functions to
    satisfy the coverage test

  * drop prototypes from method subs (where the prototypes have no effect)

  * in tests, avoid unreliable "\d" regexp element

  * typo fix in documentation

  * really complete dependency list (was missing "integer", and
    build_requires was missing "IO::File")

  * include "distribution_type" entry in META.yml to satisfy CPANTS

  * in documentation, separate "license" section from "copyright" section

  * use full stricture in Build.PL

  * remove from .cvsignore items that don't occur with Module::Build

version 0.001; 2007-09-12

  * bugfix: override any ambient $SIG{__DIE__} handler when using eval { }
